Changelog of pam-redhat modules
-------------------------------

This changelog describes only changes after branching of pam-redhat modules
without autoconf support.

0.99.5-1: Wed May 10 2006

* pam_console: removed glib dependency, used hashtable implementation
  by Christopher Clark

0.99.4-2: Wed Apr 26 2006

* pam_console: fixed device class for /dev/ircomm* (#189966)
* pam_console: handle missing device class gracefully

0.99.4-1: Tue Apr 25 2006

* pam_timestamp: build pam_timestamp_check as PIE
* pam_tally2: added missing ifdef HAVE_LIBAUDIT (#180054)
* pam_console: modified default perms to cover /dev/sequencer* (#184214)
* pam_console: modified default perms to cover /dev/ircomm* (#188385)

0.99.3-1: Fri Feb 03 2006

* Added new module pam_tally2 (partial rewrite of pam_tally)

0.99.2-1: Tue Jan 03 2006

* pam_console: fixed uninitialized value on broken config file 
  (#141053, patch by Jay Fenlason)
* pam_console: man page fixes.
* pam_loginuid: added option require_auditd to require auditd running (Steve Grubb).
* Use pam_prompt instead of direct conversation.

0.99.1-1: Thu Dec 15 2005

* Update all modules so they use automake infrastructure of the current
  Linux-PAM release.
* Changed logging to pam_syslog.

0.80-1: Thu Jul 14 2005

* pam_console: support perms.d directory with permissions files
* pam_loginuid: test for non existing loginuid file (module shouldn't fail)

0.79-1: Thu Mar 31 2005

* pam_console: Modify dri permissions for open source dri drivers
* pam_loginuid: Added module for setting login uid for auditing

0.78-5: Fri Mar 18 2005

* pam_console: Close all fds except std* when spawning handlers
* pam_console: Improve logging of failed handlers
* pam_console: Remove the permission changing from the pam_console.so
* pam_console: Use the improved pam_console_apply as a handler

0.78-4: Thu Mar 10 2005

* Merged fix for gcc4 compilation and config file parsing from dist